# ptychography

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  README.md  README.rst  acknowledgments.html  algorithms.html  azure-pipelines-data.yml  azure-pipelines.yml  changelog.html  citing.html  contributing.html  datasets.html  docs_requirements.txt  genindex.html  index.html  install.html  objects.inv  override_requirements.txt  py-modindex.html  pytest.ini  questionsLibertem.md  reconstructionAlgorithms.md  releasing.html  search.html  searchindex.js  setup.cfg  setup.py  test_requirements.txt  tox.ini
.doctrees/: acknowledgments.doctree  algorithms.doctree  changelog.doctree  citing.doctree  contributing.doctree  datasets.doctree  environment.pickle  index.doctree  install.doctree  releasing.doctree
.doctrees/algorithms/: live-ssb.doctree  simple-ssb.doctree  transform-example.doctree
.doctrees/changelog/bugfix/: empty.doctree
.doctrees/changelog/documentation/: datasets.doctree
.doctrees/changelog/features/: iterative.doctree
.doctrees/nbsphinx/algorithms/: live-ssb.ipynb  ssb.ipynb
.doctrees/reference/: common.doctree  index.doctree  ssb.doctree  stitching.doctree
.github/: PULL_REQUEST_TEMPLATE
_modules/: index.html
_modules/ptychography40/reconstruction/: common.html
_modules/ptychography40/reconstruction/ssb/: trotters.html  udf.html
_modules/ptychography40/stitching/: stitching.html
_sources/: acknowledgments.rst.txt  algorithms.rst.txt  changelog.rst.txt  citing.rst.txt  datasets.rst.txt  index.rst.txt  install.rst.txt  releasing.rst.txt
_sources/algorithms/: transform-example.nblink.txt
_sources/changelog/documentation/: datasets.rst.txt
_sources/changelog/features/: iterative.rst.txt
_sources/reference/: common.rst.txt  stitching.rst.txt
algorithms/: live-ssb.html  live-ssb.ipynb  simple-ssb.html  simple-ssb.ipynb  ssb.html  transform-example.html  transform-example.ipynb
benchmarks/reconstruction/: test_common.py
changelog/bugfix/: empty.html
changelog/documentation/: datasets.html
changelog/features/: iterative.html
data/ptychoMeasurementsDESY/: readme.md
docs/: Makefile  make.bat
docs/source/: acknowledgments.rst  algorithms.rst  api.rst  applications.rst  authorship.rst  changelog.rst  citing.rst  conf.py  contributing.rst  debugging.rst  index.rst  install.rst  references-ptychography.bib  releasing.rst  tips.rst
docs/source/algorithms/: live-ssb.nblink  simple-ssb.nblink  ssb.nblink  transform-example.ipynb
docs/source/app/: weakphase.rst
docs/source/changelog/documentation/: import.rst
docs/source/changelog/features/: ssb.rst
docs/source/reference/: api.rst  application.rst  common.rst  index.rst  ssb.rst  stitching.rst  wdd.rst
docs/source/reference/app/: weakphase.rst
examples/: simple-ssb.ipynb  ssb-example.ipynb  ssb-example.ipynb.save  ssb-live-reconstruction.ipynb  transform-example.ipynb  wdd-example.ipynb
packaging/: contributors.json  creators.json  zenodo-upload.json
prototypes/: coords.ipynb  real_coord.ipynb  reconstructionAlgorithms.md
prototypes/alpaka_binding/: README.md  Requirements.md
prototypes/alpaka_binding/alpaka/: CMakeLists.txt  README.md  algo.hpp  binding.cpp  test.py
prototypes/alpaka_binding/simple_cpp/: CMakeLists.txt  README.md  algo.hpp  algo.py  binding.cpp  test.py  wrapper.cpp  wrapper.hpp
prototypes/alpaka_binding/simple_cuda/: CMakeLists.txt  README.md  algo.hpp  binding.cu  cu_algo.hpp  cu_umem_algo.hpp  test.py
prototypes/raar_pytorch/: README.txt  raar.py  readme.md  reconst_lite.py
prototypes/reconstructionAlgorithms/: KuramotoViscek  Smileys1.eps  Smileys2.eps
prototypes/ssb/: SSB-live.ipynb  Single-sideband-onestep.ipynb  binned.ipynb  gibbs-damping.ipynb  ssb-UDF-testbed.ipynb  ssb-normalization.ipynb  ssb-validation.ipynb  ssb_lowmem.py
prototypes/ssb_mplementation/: ssb.py
prototypes/stitching/: test_stitching.py
raar_pytorch/: README.txt  raar.py  util.py
reconstructionAlgorithms/: KuramotoViscek
reference/: common.html  index.html  ssb.html  stitching.html
scripts/: codecov.py  codecov.sh  creatorlist.ipynb  deploy_docs  release  zenodo_upload
src/ptychography/reconstruction/: common.py  ssb.py  ssb_lowmem.py
src/ptychography/reconstruction/ssb/: __init__.py  trotters.py  udf.py
src/ptychography/stitching/: stitching.py
src/ptychography40/reconstruction/: common.py
src/ptychography40/reconstruction/ssb/: __init__.py  trotters.py  udf.py
src/ptychography40/reconstruction/wdd/: dim_reduct.py  params_recon.py  wdd_udf.py  wiener_filter.py
src/ptychography40/stitching/: stitching.py
tests/: conftest.py  test_smoke.py
tests/reconstruction/: test_common.py  test_ssb.py  test_ssb_lowmem.py  test_wdd.py
tests/stitching/: test_stitching.py
